Define button components.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button class="btn btn--accent btn--block">buy now</button>
+    <a href="#" class="btn btn--outline">buy now</a>
+  </body>
 </html>
