--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button class="btn btn--accent btn--block">buy now</button>
-    <a href="#" class="btn btn--outline">buy now</a>
+    <input type="text" placeholder="Enter domain name here..." class="input" />
   </body>
 </html>
