Define input Groups component

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" placeholder="Enter domain name here..." class="input" />
+    <div class="input-group">
+      <input
+        type="text"
+        placeholder="Enter domain name here..."
+        class="input"
+      />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
