--- a/index.html
+++ b/index.html
@@ -14,37 +14,17 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body style="padding: 5rem">
-    <div class="card testimonial">
+  <body>
+    <div class="callout callout--primary">
       <div class="grid grid--cols2">
-        <div class="testimonial__image">
-          <img src="/images/testimonial.jpg" alt="A happy smiling customer" />
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--white icon--small">
-              <use xlink:href="images/sprite.svg#quotes"></use>
-            </svg>
-          </span>
-        </div>
-        <blockquote class="quote">
-          <p class="quote__text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
-            placeat fugiat dolor corrupti quisquam, dicta voluptate ea.
-            Exercitationem, iusto magni!
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready To Get Started?</h2>
+          <p>
+            Choose the hosting provider that helps you start easy, build fast,
+            and grow strong! Its risk-free with our 14-day money back guarantee.
           </p>
-          <footer>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary quote__line">
-                  <use xlink:href="images/sprite.svg#line"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">John Smith</h3>
-                <p class="quote__organization">Mosh Company ceo</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+        </div>
+        <a href="" class="btn btn--secondary btn--stretched">Get Started</a>
       </div>
     </div>
   </body>
