--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--cols2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready To Get Started?</h2>
-          <p>
-            Choose the hosting provider that helps you start easy, build fast,
-            and grow strong! Its risk-free with our 14-day money back guarantee.
-          </p>
-        </div>
-        <a href="" class="btn btn--secondary btn--stretched">Get Started</a>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h3 class="collapsible__heading">products</h3>
+        <svg class="icon icon-- collapsible__icon">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+        repellat?
       </div>
     </div>
+    <script src="/js/main.js"></script>
   </body>
 </html>
