--- a/index.html
+++ b/index.html
@@ -15,18 +15,24 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h3 class="collapsible__heading">products</h3>
-        <svg class="icon icon-- collapsible__icon">
-          <use xlink:href="images/sprite.svg#menu"></use>
-        </svg>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+          repudiandae?
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-        repellat?
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+          repudiandae?
+        </p>
       </div>
-    </div>
+    </section>
     <script src="/js/main.js"></script>
   </body>
 </html>
