--- a/index.html
+++ b/index.html
@@ -15,27 +15,35 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="block block--dark block--skewed-left hero">
-      <div class="container grid grid--cols2">
-        <header class="block__header hero__content">
-          <h1 class="block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">
-            Deploy your website in less than 60 seconds
-          </p>
-          <a href="#" class="btn btn--accent btn--stretched">GET STARTED</a>
-        </header>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/banner1x.webp 1x, images/banner2x.webp 2x"
-          />
-          <source
-            type="image/png"
-            srcset="images/banner1x.png 1x, images/banner2x.png 2x"
-          />
-          <img class="hero__image" src="/images/banner.png " alt="" />
-        </picture>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>The best webhosting Starting at per month</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          tempore.
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          placeholder="Enter domain name here..."
+          class="input"
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
       </div>
+      <ul class="list block-domain__prices">
+        <li>.com $9.26</li>
+        <li><span class="badge badge--secondary">.sg $7.91</span></li>
+        <li>.space $12</li>
+        <li>.info $14.15</li>
+        <li>.net $16.15</li>
+        <li>.xyz $10.15</li>
+      </ul>
     </section>
     <script src="/js/main.js"></script>
   </body>
