--- a/index.html
+++ b/index.html
@@ -15,71 +15,94 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="block container block-plans">
-      <div class="grid--cols3 grid">
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Storage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">buy now</button>
-            </div>
-          </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host Оn Тhe Cloud to Keep Growing</h2>
+        <p>
+          Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+          maecenas accumsan.
+        </p>
+      </header>
+      <article class="grid grid--cols2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
+            expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
+            Modi?
+          </p>
+          <a href="#" class="link-arrow">learn more</a>
         </div>
-        <div class="plan plan--popular">
-          <div class="card card--primary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--primary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Storage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">buy now</button>
-            </div>
-          </div>
-        </div>
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Storage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-              <button class="btn btn--outline btn--block">buy now</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/easy1x.webp 1x, images/easy2x.webp 2x" />
+          <source
+            type="image/jpg"
+            srcset="images/easy1x.jpg 1x, images/easy2x.jpg 2x" />
+          <img class="feature__image" src="images/easy2x.jpg" alt=""
+        /></picture>
+      </article>
 
+      <article class="grid grid--cols2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
+            expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
+            Modi?
+          </p>
+          <a href="#" class="link-arrow">learn more</a>
+        </div>
+        <img class="feature__image" src="images/fast.jpg" alt="" />
+      </article>
+
+      <article class="grid grid--cols2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
+            expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
+            Modi?
+          </p>
+          <a href="#" class="link-arrow">learn more</a>
+        </div>
+        <img class="feature__image" src="images/wordpress.jpg" alt="" />
+      </article>
+
+      <article class="grid grid--cols2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
+            expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
+            Modi?
+          </p>
+          <a href="#" class="link-arrow">learn more</a>
+        </div>
+        <img class="feature__image" src="images/support.jpg" alt="" />
+      </article>
+    </section>
     <script src="/js/main.js"></script>
   </body>
 </html>
