--- a/index.html
+++ b/index.html
@@ -15,51 +15,57 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="block">
-      <header class="block__header">
-        <h2>What our Customer are Saying</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, minus!
-        </p>
-      </header>
-      <div class="container">
-        <div class="card testimonial">
-          <div class="grid grid--cols2">
-            <div class="testimonial__image">
-              <img
-                src="/images/testimonial.jpg"
-                alt="A happy smiling customer"
-              />
-              <span class="icon-container icon-container--accent">
-                <svg class="icon icon--white icon--small">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
-                </svg>
-              </span>
-            </div>
-            <blockquote class="quote">
-              <p class="quote__text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
-                placeat fugiat dolor corrupti quisquam, dicta voluptate ea.
-                Exercitationem, iusto magni!
-              </p>
-              <footer>
-                <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use xlink:href="images/sprite.svg#line"></use>
-                    </svg>
-                  </div>
-                  <div class="media__body">
-                    <h3 class="media__title quote__author">John Smith</h3>
-                    <p class="quote__organization">Mosh Company ceo</p>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">products</h2>
+            <svg class="icon icon--">
+              <use xlink:href="images/sprite.svg#menu"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated WordPress </a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Monthly Web Hosting</a></li>
+            </ul>
           </div>
-        </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">company</h2>
+            <svg class="icon icon-- collapsible__icon">
+              <use xlink:href="images/sprite.svg#menu"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+            repellat?
+          </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">support</h2>
+            <svg class="icon icon-- collapsible__icon">
+              <use xlink:href="images/sprite.svg#menu"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+            repellat?
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright © 2020 mosh</p>
+        </section>
       </div>
-    </section>
+    </footer>
     <script src="/js/main.js"></script>
   </body>
 </html>
