--- a/playground.html
+++ b/playground.html
@@ -29,7 +29,7 @@
               <use xlink:href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Super very Easy to Use</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
             expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
@@ -55,7 +55,7 @@
               <use xlink:href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Super very Easy to Use</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
             expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
@@ -73,7 +73,7 @@
               <use xlink:href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Super very Easy to Use</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
             expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
@@ -91,7 +91,7 @@
               <use xlink:href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Super very Easy to Use</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum
             expedita. Sunt quam quos aliquid incidunt adipisci deserunt ut!
